freest/test/prog/Invalid/SessionTypes/SelectOnExternalChoice/SelectOnExternalChoice.fst
module SelectOnExternalChoice where

f : &{A: Skip} -> Skip
f c = select A c